--- a/Contact Us.html
+++ b/Contact Us.html
@@ -154,7 +154,7 @@
                         <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
                             <div>
                                 <input type="submit" value="SUBMIT"
-                                    class="project-btn bg-sky-600 p-3 px-16 text-xl font-medium tracking-wider text-center">
+                                    class="project-btn bg-sky-600 hover:bg-white hover:text-sky-600  transition duration-150 ease-in-out cursor-pointer p-3 px-16 text-xl font-medium tracking-wider text-center">
                             </div>
                         </div>
                     </form>
