--- a/Portfolio.html
+++ b/Portfolio.html
@@ -228,7 +228,7 @@
                     </div>
                     <div class="w-full justify-center items-center">
                         <div class="text-center mt-8">
-                            <button class="project-btn bg-sky-600 mt-10 p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
+                            <button class="project-btn bg-sky-600 hover:bg-white hover:text-sky-600  transition duration-150 ease-out hover:ease-in  mt-10 p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
                                 Load more
                             </button>
                         </div>
