--- a/VR-Times.html
+++ b/VR-Times.html
@@ -123,9 +123,9 @@
                                         Designing an Impactful VR Industrial Training Program: Step-by-Step Virtual Reality
                                         (VR)....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -143,9 +143,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         While critics have spent the previous four years busy writing obituaries for Meta’s metaverse dream....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -163,9 +163,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         After a few years of waiting, Meta Connect 2023 finally reignited the excitement in the virtual reality....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -185,9 +185,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         Imagine living in a world where creating beautiful 3D models and animations is as simple....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -205,9 +205,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         VR training can provide a number of benefits for companies, including improved learning outcomes....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -225,9 +225,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         After a few years of waiting, Meta Connect 2023 finally reignited the excitement in the virtual reality....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -247,9 +247,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         This is definitely one of the easiest video explanations how we can have a 3d model using AI tools....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -267,9 +267,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         The term “Metaverse” has been with us since 1992, appearing in Neal Stephenson’s novel....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
@@ -287,9 +287,9 @@
                                     <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
                                         Virtual Reality (VR) is an innovative technology that has the potential to revolutionize the automotive industry....
                                     </p>
-                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
-                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center group">
+                                        <span class="font-2 text-yellow-500 pr-5 group-hover:text-yellow-400 transition duration-150 ease-in-out ">READ MORE</span>
+                                        <img class="w-14 h-4  group-hover:ml-2 group-hover:w-20 transition duration-300 ease-in-out" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
                             </div>
