--- a/home.html
+++ b/home.html
@@ -168,23 +168,24 @@
                     </p>
                 </div>
             </div>
-            <div class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-4 text-xl "
+            <div class="container  lg:container  xl:container  lg:container  md:container  sm:container  mx-auto px-4 flex items-center py-4 text-xl "
                 style="position: relative; z-index: 999;">
                 <div class="w-96"></div>
                 <div class="w-96"></div>
                 <div class="banner-img flex items-center mt-10 relative">
                     <img class="w-64" src="assets/image/banner-img.png" alt="banner-img">
-                    <div style="position: absolute;right: -40px;"
-                        class="flex justify-center items-center play-btn w-16 h-16 bg-yellow-500 rounded-full outline outline-offset-1 outline-2 outline-offset-4">
-                        <a href="">
-                            <img class="w-6 h-6" src="assets/image/play-btn.png" alt="play-btn">
-                        </a>
+                    <div  style="position: absolute;right: -220px;" class="flex items-center group">
+                        <div class="flex justify-center items-center play-btn w-16 h-16 bg-yellow-500 trasition  group-hover:bg-white  group-hover:outline-yellow-500 rounded-full outline outline-offset-1 outline-2 outline-offset-4">
+                            <a href="" class=" w-16 h-16 flex justify-evenly items-center">
+                                <i class="fa-solid fa-caret-up fa-rotate-90 text-5xl text-white  group-hover:text-yellow-500"></i>
+                            </a>
+                        </div>
+                        <div class="ml-5">
+                            <a href="">
+                                <span class="text-yellow-500 text-3xl font-2  group-hover:text-white">Watch Intro</span>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="ml-14 mt-10">
-                    <a href="">
-                        <span class="text-yellow-500 text-3xl font-2 hover:text-white">Watch Intro</span>
-                    </a>
                 </div>
             </div>
         </div>
@@ -325,8 +326,7 @@
                                 <div class="lg:flex lg:justify-start md:justify-end lg:mt-10 md:mt-5">
     
                                     <a href=""
-                                        class="project-btn bg-sky-600 p-3 px-4 text-base font-medium tracking-wider text-center"
-                                        style="width: 150px;">VIEW ALL</a>
+                                        class="project-btn bg-sky-600 hover:bg-white hover:text-sky-600 transition duration-150 ease-out hover:ease-in  p-3 px-10 font-medium tracking-wider text-center">VIEW ALL</a>
                                 </div>
                             </div>
                         </div>
@@ -368,32 +368,32 @@
                                 <div class="lg:w-60 lg:h-64 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64" src="assets/image/services-1.png" alt="services-1" style="border: 2px solid #241e37;">
                                 </div>
-                                <p class="text-center mt-6 lg:text-lg md:text-lg">Virtual Reality</p>
+                                <p class="text-center mt-6 lg:text-2xl md:text-lg">Virtual Reality</p>
                             </div>
                             <div class="flex flex-col items-center">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64" src="assets/image/services-2.png" alt="services-2" style="border: 2px solid #241e37;">
                                 </div>
-                                <p class="text-center mt-6 lg:text-lg md:text-lg">VR Industrial <br> Training</p>
+                                <p class="text-center mt-6 lg:text-2xl md:text-lg">VR Industrial <br> Training</p>
                             </div>
                             <div class="flex flex-col items-center">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64 object-center" src="assets/image/services-3.png"
                                         alt="services-3" style="border: 2px solid #241e37;">
                                 </div>
-                                <p class="text-center mt-6 lg:text-lg md:text-lg">Metaverse <br> Development</p>
+                                <p class="text-center mt-6 lg:text-2xl md:text-lg">Metaverse <br> Development</p>
                             </div>
                             <div class="flex flex-col items-center">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64" src="assets/image/services-4.png" alt="services-4" style="border: 2px solid #241e37;">
                                 </div>
-                                <p class="text-center mt-6 lg:text-lg md:text-lg">Virtual Event <br> Management</p>
+                                <p class="text-center mt-6 lg:text-2xl md:text-lg">Virtual Event <br> Management</p>
                             </div>
                             <div class="flex flex-col items-center">
                                 <div class="lg:w-60 lg:h-60 md:w-32 md:h-32">
                                     <img class="object-cover md:w-32 md:h-32 lg:w-64 lg:h-64" src="assets/image/services-5.png" alt="services-5" style="border: 2px solid #241e37;">
                                 </div>
-                                <p class="text-center mt-6 lg:text-lg md:text-lg">VR Consultation</p>
+                                <p class="text-center mt-6 lg:text-2xl md:text-lg">VR Consultation</p>
                             </div>
                         </div>
                     </div>
@@ -420,9 +420,9 @@
                                 Designing an Impactful VR Industrial Training<br> Program: Step-by-Step Virtual Reality
                                 (VR)....
                             </p>
-                            <a href="VR-Times.html" class="pt-4 flex items-center">
-                                <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
-                                <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                            <a href="VR-Times.html" class="pt-4 flex items-center group">
+                                <span class="font-2 text-base text-yellow-500 pr-5  group-hover:text-yellow-400  transition duration-150 ease-out hover:ease-in ">READ MORE</span>
+                                <img class="w-14 h-4  group-hover:ml-2 transition duration-150 ease-out hover:ease-in " src="assets/image/Arrow 1.png" alt="Arrow">
                             </a>
                         </div>
                     </div>
@@ -435,15 +435,15 @@
                                 Illumetry, a provider of XR displays, recently<br> announced its Illumetry EOS
                                 gadget....
                             </p>
-                            <a href="VR-Times.html" class="pt-4 flex items-center">
-                                <span class="font-2 text-base text-yellow-500 pr-5 tracking-wide">READ MORE</span>
-                                <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                            <a href="VR-Times.html" class="pt-4 flex items-center group">
+                                <span class="font-2 text-base text-yellow-500 pr-5  group-hover:text-yellow-400  transition duration-150 ease-out hover:ease-in ">READ MORE</span>
+                                <img class="w-14 h-4  group-hover:ml-2 transition duration-150 ease-out hover:ease-in " src="assets/image/Arrow 1.png" alt="Arrow">
                             </a>
                         </div>
                     </div>
                     <div class="mt-10 lg:block md:hidden">
                         <a href="VR-Times.html"
-                            class="text-lg project-btn bg-sky-600 p-2.5 px-20 text-base font-medium tracking-wider text-center"
+                            class="text-lg project-btn bg-sky-600  hover:bg-white hover:text-sky-600 transition duration-150 ease-out hover:ease-in p-2.5 px-20 text-base font-medium tracking-wider text-center"
                             style="width: 150px;">VIEW ALL</a>
                     </div>
                 </div>
