--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -140,7 +140,7 @@
                         <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
                             <div>
                                 <button type="submit"
-                                    class="project-btn bg-sky-600 p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
+                                    class="project-btn bg-sky-600 hover:bg-white hover:text-sky-600  transition duration-150 ease-out hover:ease-in  p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
                                     Send
                                 </button>
                             </div>
