--- a/service-vr.html
+++ b/service-vr.html
@@ -156,7 +156,7 @@
                         <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
                             <div>
                                 <button type="submit"
-                                    class="project-btn bg-sky-600 p-3 px-16 text-xl font-medium tracking-wider text-center">
+                                    class="project-btn bg-sky-600 p-3 px-16 text-xl hover:bg-white hover:text-sky-600  transition duration-150 ease-out hover:ease-in  font-medium tracking-wider text-center">
                                     SUBMIT
                                 </button>
                             </div>
@@ -539,7 +539,7 @@
     
                         <!-- Load More Button -->
                         <div class="text-center mt-8">
-                            <button class="project-btn bg-sky-600 mt-10 p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
+                            <button class="project-btn bg-sky-600 hover:bg-white hover:text-sky-600  transition duration-150 ease-out hover:ease-in  mt-10 p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
                                 Load more
                             </button>
                         </div>
