--- a/Contact Us.html
+++ b/Contact Us.html
@@ -27,12 +27,11 @@
         rel="stylesheet">
     <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
 </head>
 
 <body>
     <!-- header -->
-    <header>
+    <header class="">
         <div class="navbar">
             <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
@@ -94,7 +93,7 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40">
+        <div class="relative sub-banner bg-center bg-top bg-cover bg-no-repeat p-40">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
                     <h1 class="font-2 text-7xl leading-normal mt-20">
