--- a/Portfolio.html
+++ b/Portfolio.html
@@ -108,120 +108,114 @@
             <!-- gallery -->
             <div class="gallery">
                 <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
-                    <div class="w-full flex justify-evenly">
-                        <a href="" class="p-2 px-6 bg-yellow-500">
+                    <div class="w-full flex flex-wrap justify-evenly">
+                        <a href="" class="h-10 p-1 px-7 mt-5 bg-yellow-500">
                             All
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                        <a href="" class="h-10 p-1 mt-5 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
                             AI
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                        <a href="" class="h-10 p-1 mt-5 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
                             Configurator
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                        <a href="" class="h-10 p-1 mt-5 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
                             Homepage
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                        <a href="" class="h-10 p-1 mt-5 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
                             Industrial VR Training
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                        <a href="" class="h-10 p-1 mt-5 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
                             Latest
                         </a>
-                    </div>
-                    <div class="w-full flex justify-center mt-10">
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mx-10">
+                        <a href="" class="h-10 p-1 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mt-5">
                             Virtual Reality
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mx-10">
+                        <a href="" class="h-10 p-1 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mt-5">
                             Webver
                         </a>
-                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mx-10">
+                        <a href="" class="h-10 p-1 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mt-5">
                             Virtual Events
                         </a>
                     </div>
-                    <div class="w-full flex mt-20">
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                    <div class="w-full flex flex-wrap justify-evenly items-center mt-20">
+                        <div class="w-96 bg-cover relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-1.png" alt="gallery-1">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out mx-10">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-2.png" alt="gallery-2">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                        <div class="w-96 bg-cover relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-3.png" alt="gallery-3">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                    </div>
-                    <div class="w-full flex mt-20">
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-4.png" alt="gallery-4">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out mx-10">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-5.png" alt="gallery-5">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-6.png" alt="gallery-6">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                    </div>
-                    <div class="w-full flex mt-20">
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-7.png" alt="gallery-7">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out mx-10">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-8.png" alt="gallery-8">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                        <div class="w-96 bg-cover  relative galleryImg transition duration-300 ease-in-out mt-10">
                             <div class="">
                                 <img src="assets/image/gallery-9.png" alt="gallery-9">
                             </div>
                             <div
-                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                class="gallery-img w-full  h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
                                 Virtual Art Gallery
                             </div>
                         </div>
