--- a/VR-Times.html
+++ b/VR-Times.html
@@ -103,13 +103,13 @@
                 </div>
             </div>
         </div>
-        <div class="my-32"></div>
+        <div class="my-20"></div>
         <div class="gradiant-2 gradiant-5 relative overflow-hidden">
             <!-- AR/VR card -->
             <div class="arVrCard">
                 <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
-                    <div class="w-full flex">
-                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                    <div class="w-full flex flex-wrap justify-evenly">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-1.png" alt="times-1" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-1/3 choose-bg mx-20" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-3.png" alt="times-3" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-4.png" alt="times-1" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -170,9 +170,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="w-full flex mt-20">
-                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-5.png" alt="times-5" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -192,7 +190,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-1/3 choose-bg mx-20" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-6.png" alt="times-6" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -212,7 +210,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-7.png" alt="times-7" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -232,9 +230,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="w-full flex mt-20">
-                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-8.png" alt="times-8" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -254,7 +250,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-1/3 choose-bg mx-20" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-9.png" alt="times-9" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -274,7 +270,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                        <div class="mt-14 choose-bg" style="width: 450px; height: 600px;">
                             <div class="relative">
                                 <img src="assets/image/times-10.png" alt="times-10" class="h-72 object-cover object-center">
                                 <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
@@ -308,38 +304,38 @@
                             </h3>
                         </div>
                         <div class="flex justify-between items-start mt-20">
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-1.png" alt="company-1"
-                                        style="height: 236px;">
+                            <div class="flex flex-wrap items-center justify-center">
+                                <div class="w-60 h-60 md:w-48 md:h-48">
+                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-1.png" alt="company-1"
+                                        >
                                 </div>
                             </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-2.png" alt="company-2"
-                                        style="height: 236px;">
+                            <div class="h-60 md:h-48 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex items-center justify-center">
+                                <div class="w-60 h-60 md:w-48 md:h-48">
+                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-2.png" alt="company-2"
+                                        >
                                 </div>
                             </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover object-center" src="assets/image/company-3.png"
-                                        alt="company-3" style="height: 236px;">
+                            <div class="h-60 md:h-48 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex items-center justify-center">
+                                <div class="w-60 h-60 md:w-48 md:h-48">
+                                    <img class="object-cover h-56 md:h-44 object-center" src="assets/image/company-3.png"
+                                        alt="company-3" >
                                 </div>
                             </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-4.png" alt="company-4"
-                                        style="height: 236px;">
+                            <div class="h-60 md:h-48 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex items-center justify-center">
+                                <div class="w-60 h-60 md:w-48 md:h-48">
+                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-4.png" alt="company-4"
+                                        >
                                 </div>
                             </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-5.png" alt="company-5"
-                                        style="height: 236px;">
+                            <div class="h-60 md:h-48 md:hidden lg:block border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex md:hidden lg:block items-center justify-center">
+                                <div class="w-60 h-60 md:w-48 md:h-48">
+                                    <img class="object-cover h-56 md:h-44" src="assets/image/company-5.png" alt="company-5"
+                                        >
                                 </div>
                             </div>
                         </div>
